--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Теперь вы можете реагировать с помощью любого эмодзи во время звонка Signal. Улыбайтесь, даже если ваша камера выключена, делитесь сердечками, если вам нравится то, что вы слышите, или голосуйте за суши вместо пиццы, не сказав ни слова. И вы даже увидите анимацию вспышки гнева, если достаточное количество участников звонка отреагируют одним и тем же эмодзи одновременно.
+• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
