--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• يُمكنك الآن التفاعل مع أي رمز تعبيري خلال مكالمة سيجنال.
+• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
