--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• Od teď můžete během Signal hovoru reagovat jakýmkoliv emoji. Můžete přidat úsměv, srdíčko tomu, kdo volá, že ho máte rádi, nebo hlasovat pro suši místo pizzy – a nemusíte říct ani slovo. A pokud během hovoru zareaguje dostatečný počet lidí najednou stejným emoji, uvidíte dokonce animaci všech emoji.
+• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
