--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• Mostantól bármilyen hangulatjellel reagálhatsz egy Signal-hívás alatt.
+• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
